// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > renders correctly with current page prop 1`] = `
.c0 {
  display: flex;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 18px;
  height: 18px;
  transform: rotate(0deg);
}

.c3 svg {
  color: #292924!important;
}

.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 18px;
  height: 18px;
  transform: rotate(180deg);
}

.c8 svg {
  color: #292924!important;
}

.c7 {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c1 {
  align-items: center;
}

.c1 >button {
  margin-right: 4px;
}

.c1 >button:last-child {
  margin-right: 0;
}

.c6 {
  background: #f1e9dc;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c6:hover {
  background-color: #f1e9dc;
}

.c6:active {
  background-color: #f8f2ea;
}

.c6:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c4 {
  background: #ffffff;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c4:hover {
  background-color: #f1e9dc;
}

.c4:active {
  background-color: #f8f2ea;
}

.c4:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c2 {
  cursor: pointer;
}

.c2:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

@media (min-width: 0px) {
  .c0 {
    flex-direction: row;
  }
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <button
        aria-label="previous-page"
        class="c2"
      >
        <span
          class="c3"
          data-testid="arrow-container"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.087 12.401c.014.033.042.058.06.089a.99.99 0 00.177.238c.008.007.01.018.018.025l8 7a1 1 0 101.316-1.505L5.661 13H21a1 1 0 100-2H5.661l5.997-5.248a1 1 0 10-1.316-1.504l-8 7c-.008.007-.011.018-.018.025a.99.99 0 00-.177.238c-.018.031-.045.056-.06.089a.97.97 0 000 .801z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          1
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          2
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          3
        </p>
      </button>
      <button
        class="c6"
      >
        <p
          class="c7"
          cursor="inherit"
          title=""
        >
          4
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          5
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          ...
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          12
        </p>
      </button>
      <button
        aria-label="next-page"
        class="c2"
      >
        <span
          class="c8"
          data-testid="arrow-container"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.087 12.401c.014.033.042.058.06.089a.99.99 0 00.177.238c.008.007.01.018.018.025l8 7a1 1 0 101.316-1.505L5.661 13H21a1 1 0 100-2H5.661l5.997-5.248a1 1 0 10-1.316-1.504l-8 7c-.008.007-.011.018-.018.025a.99.99 0 00-.177.238c-.018.031-.045.056-.06.089a.97.97 0 000 .801z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Pagination > renders correctly with default props 1`] = `
.c0 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 18px;
  height: 18px;
  transform: rotate(180deg);
}

.c7 svg {
  color: #292924!important;
}

.c3 {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c1 {
  align-items: center;
}

.c1 >button {
  margin-right: 4px;
}

.c1 >button:last-child {
  margin-right: 0;
}

.c2 {
  background: #f1e9dc;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c2:hover {
  background-color: #f1e9dc;
}

.c2:active {
  background-color: #f8f2ea;
}

.c2:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c4 {
  background: #ffffff;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c4:hover {
  background-color: #f1e9dc;
}

.c4:active {
  background-color: #f8f2ea;
}

.c4:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c6 {
  cursor: pointer;
}

.c6:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

@media (min-width: 0px) {
  .c0 {
    flex-direction: row;
  }
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <button
        class="c2"
      >
        <p
          class="c3"
          cursor="inherit"
          title=""
        >
          1
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          2
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          3
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          4
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          5
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          ...
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          12
        </p>
      </button>
      <button
        aria-label="next-page"
        class="c6"
      >
        <span
          class="c7"
          data-testid="arrow-container"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.087 12.401c.014.033.042.058.06.089a.99.99 0 00.177.238c.008.007.01.018.018.025l8 7a1 1 0 101.316-1.505L5.661 13H21a1 1 0 100-2H5.661l5.997-5.248a1 1 0 10-1.316-1.504l-8 7c-.008.007-.011.018-.018.025a.99.99 0 00-.177.238c-.018.031-.045.056-.06.089a.97.97 0 000 .801z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</body>
`;
